--- a/Net-Connection-FreeBSD_sockstat/Changes
+++ b/Net-Connection-FreeBSD_sockstat/Changes
@@ -1,5 +1,6 @@
 Revision history for Net-Connection-FreeBSD_sockstat
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.0.1	 2021-02-08/08:00
+		 - Initial release.
+
 
